tests/baselines/reference/es5-asyncFunctionArrayLiterals(strict=true).errors.txt
es5-asyncFunctionArrayLiterals.ts(1,13): error TS7005: Variable 'x' implicitly has an 'any' type.
es5-asyncFunctionArrayLiterals.ts(1,16): error TS7005: Variable 'y' implicitly has an 'any' type.
es5-asyncFunctionArrayLiterals.ts(1,19): error TS7005: Variable 'z' implicitly has an 'any' type.
es5-asyncFunctionArrayLiterals.ts(1,22): error TS7005: Variable 'a' implicitly has an 'any' type.


==== es5-asyncFunctionArrayLiterals.ts (4 errors) ====
    declare var x, y, z, a;
                ~
!!! error TS7005: Variable 'x' implicitly has an 'any' type.
                   ~
!!! error TS7005: Variable 'y' implicitly has an 'any' type.
                      ~
!!! error TS7005: Variable 'z' implicitly has an 'any' type.
                         ~
!!! error TS7005: Variable 'a' implicitly has an 'any' type.
    
    async function arrayLiteral0() {
        x = [await y, z];
    }
    
    async function arrayLiteral1() {
        x = [y, await z];
    }
    
    async function arrayLiteral2() {
        x = [...(await y), z];
    }
    
    async function arrayLiteral3() {
        x = [...y, await z];
    }
    
    async function arrayLiteral4() {
        x = [await y, ...z];
    }
    
    async function arrayLiteral5() {
        x = [y, ...(await z)];
    }
    
    async function arrayLiteral6() {
        x = [y, await z, a];
    }
    
    async function arrayLiteral7() {
        x = [await y, z, await a];
    }